--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root{
+    --asideBack:#662323;
+    --asideSelectText: #E86060;
+
+    --searchBorder:#828282;
+    --searchText:#BDBDBD;
+    --searchUserText:#4F4F4F;
+
+    --mainFollowersText:#662323;
+    --mainButtonBorder:#EB5757;
+    --mainResultTitle:#555555;
+    --mainResultArtist:#828282;
+
+    --footerEllipse:#FF7676;
+    ;
+
+    --whiteText: #FFFFFF;
+
+
+}
+body{
+    font-family: 'Quicksand', sans-serif;
 }
