Finished funcionality but no responsive

--- a/src/components/MainPage/Footer/styles/footer.css
+++ b/src/components/MainPage/Footer/styles/footer.css
@@ -21,3 +21,33 @@
     height: 60px;
     border-radius: 100%;
 }
+
+input[type=range]{
+    -webkit-appearance: none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+    width: 300px;
+    height: 5px;
+    background: var(--whiteText);
+    border: none;
+    border-radius: 3px;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    border: none;
+    height: 16px;
+    width: 16px;
+    border-radius: 50%;
+    background: var(--whiteText);
+    margin-top: -5px;
+}
+
+input[type=range]:focus {
+    outline: none;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: var(--whiteText);
+}
